setup/Istio/ingress/20_istio_kiali.yaml
---
# VirtualService routing for host ${K8S_ENVIRONMENT}.istio-kiali.slainte.at to kiali service
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-kiali-dashboard
  namespace: istio-system
spec:
  hosts:
    - "${K8S_ENVIRONMENT}.istio-kiali.slainte.at"
  gateways:
    - "istio-system/http-slainte-gateway"
  http:
    - match:
      - uri:
          prefix: /kiali/     # adjust if Kiali is served at a different basePath    
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
---
