setup/Istio/ingress/20_k8s-dashboard-slainte-internal-only.yaml
---
# VirtualService routing for host k8s.dashboard.slainte.at to kubernetes-dashboard service
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubernetes-dashboard-passthrough
  namespace: kube-system
spec:
  hosts:
    - "k8s.dashboard.slainte.at"
  gateways:
    - "istio-system/k8s-passthrough-gateway"
  tls:
    # SNI-based routing: match SNI host and route raw TLS to dashboard svc:443
    - match:
      - port: 443
        sniHosts:
          - "k8s.dashboard.slainte.at"
      route:
      - destination:
          host: kubernetes-dashboard.kube-system.svc.cluster.local
          port:
            number: 443
---
