setup/Istio/ingress/30_k8s-prometheus-slainte-at.yaml
---
# VirtualService routing for host kube-prom-stack-kube-prome-prometheus
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kube-prom-stack-kube-prome-prometheus-vs
  namespace: observability
spec:
  hosts:
    - "${K8S_ENVIRONMENT}.prometheus.slainte.at"
  gateways:
    - "istio-system/http-slainte-gateway"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prom-stack-kube-prome-prometheus.observability.svc.cluster.local
            port:
              number: 9090
---
