setup/Istio/ingress/40_k8s-grafana-slainte-at.yaml
---
# VirtualService routing for host k8s.grafana.slainte.at
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: k8s-grafana-slainte-at-vs
  namespace: observability
spec:
  hosts:
    - "k8s.grafana.slainte.at"
  gateways:
    - "istio-system/http-slainte-gateway"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prom-stack-grafana.observability.svc.cluster.local
            port:
              number: 80
---
